--- a/app/src/main/res/layout/fragment_article_reforest.xml
+++ b/app/src/main/res/layout/fragment_article_reforest.xml
@@ -5,17 +5,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorPrimary"
+    android:background="@drawable/background_articles"
     tools:context=".ArticleReforestFragment">
 
 
     <GridLayout
         android:layout_width="350dp"
-        android:layout_height="700dp"
-        android:layout_marginTop="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:background="@drawable/article_back"
         android:columnCount="1"
-        android:rowCount="5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
+            android:backgroundTint="@color/very_light_green"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp">
 
@@ -53,9 +53,11 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/CVArticle2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
+            android:backgroundTint="@color/very_light_green"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp">
 
@@ -83,9 +85,11 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/CVArticle3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
+            android:backgroundTint="@color/very_light_green"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp">
 
@@ -113,9 +117,11 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/CVArticle4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
+            android:backgroundTint="@color/very_light_green"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp">
 
@@ -143,9 +149,11 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/CVArticle5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
+            android:backgroundTint="@color/very_light_green"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp">
 
