--- a/app/src/main/res/layout/fragment_quiz_question.xml
+++ b/app/src/main/res/layout/fragment_quiz_question.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/quiz_background_blue"
-    tools:context=".quiz.QuizInFragment">
+    tools:context=".quiz.QuizQuestionFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
