--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <!-- Button Background Color -->
-    <solid android:color="#65AEDD" />  <!-- Set button background color -->
+    <solid android:color="@color/teal_200" />  <!-- Set button background color -->
 
     <!-- Button Corners -->
     <corners android:radius="15dp" />  <!-- Set corner radius -->
