--- a/app/src/main/res/layout/fragment_cf_second_question.xml
+++ b/app/src/main/res/layout/fragment_cf_second_question.xml
@@ -26,13 +26,13 @@
         android:layout_width="408dp"
         android:layout_height="412dp"
         android:layout_marginStart="1dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="136dp"
         android:background="@drawable/rounded_frame_background"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/IVProgressBar2">
 
         <TextView
             android:id="@+id/TVUnit2"
