--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="36dp"
-                android:layout_marginTop="88dp"
+                android:layout_marginTop="76dp"
                 android:text="Hello"
                 android:textColor="#ffffff"
                 android:textSize="23sp"
@@ -74,8 +74,8 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="112dp"
-                android:layout_marginTop="56dp"
+                android:layout_marginStart="104dp"
+                android:layout_marginTop="44dp"
                 android:text="username"
                 android:textColor="#ffffff"
                 android:textSize="23sp"
@@ -142,7 +142,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="-15dp"
-                        android:text="programmes"
+                        android:text="Programmes"
                         android:textAlignment="center"
                         android:textStyle="bold" />
 
